hoàn thiện cơ bản 70%
nâng cấp debug lại ui ux