@@ -3,7 +3,6 @@ package com.acme.leavemgmt.service;
 import com.acme.leavemgmt.dao.AttendanceDAO;
 import com.acme.leavemgmt.dao.PayrollDAO;
 import com.acme.leavemgmt.dao.PayrollDAO.PayrollItem;
-import com.acme.leavemgmt.model.User;
 import com.acme.leavemgmt.util.Csrf;
 
 import javax.sql.DataSource;
@@ -14,25 +13,26 @@ import jakarta.servlet.http.*;
 import java.io.IOException;
 import java.math.BigDecimal;
 import java.math.RoundingMode;
+import java.sql.*;
 import java.time.LocalDate;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
 @WebServlet(urlPatterns = {"/payroll", "/payroll/run"})
 public class PayrollServlet extends HttpServlet {
 
+  private DataSource ds;
   private PayrollDAO payroll;
   private AttendanceDAO attendance;
 
   @Override public void init(ServletConfig cfg) throws ServletException {
     super.init(cfg);
-    DataSource ds = (DataSource) cfg.getServletContext().getAttribute("DS");
+    ds = (DataSource) cfg.getServletContext().getAttribute("DS");
     if (ds == null) throw new ServletException("Missing DataSource DS");
-    this.payroll = new PayrollDAO(ds);
-    this.attendance = new AttendanceDAO(ds);
+    payroll = new PayrollDAO(ds);
+    attendance = new AttendanceDAO(ds);
   }
 
-  // ================== GET: xem danh sách ==================
+  /* ================== GET: luôn hiện nhân viên ACTIVE ================== */
   @Override protected void doGet(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
 
@@ -42,74 +42,67 @@ public class PayrollServlet extends HttpServlet {
     int y = intParam(req, "y", LocalDate.now().getYear());
     int m = intParam(req, "m", LocalDate.now().getMonthValue());
 
-    // nếu chưa có run thì tạo luôn cho tiện xem/sửa
     long runId = payroll.findRun(y, m).orElseGet(() -> payroll.createRun(y, m));
 
-    // >>> DAO dạng đối tượng:
-    List<PayrollItem> items = payroll.listItemsAsObjects(runId);
+    // Luôn có danh sách nhân viên bằng LEFT JOIN Users
+    List<Map<String,Object>> itemsForView = payroll.listView(runId);
 
     req.setAttribute("y", y);
     req.setAttribute("m", m);
     req.setAttribute("runId", runId);
-    req.setAttribute("items", items);
+    req.setAttribute("items", itemsForView); // JSP dùng keys: full_name, base_salary, ...
     req.getRequestDispatcher("/WEB-INF/views/payroll/list.jsp").forward(req, resp);
   }
 
-  // ================== POST: tính & lưu ==================
+  /* ================== POST: tính & lưu ================== */
   @Override protected void doPost(HttpServletRequest req, HttpServletResponse resp)
       throws ServletException, IOException {
 
     req.setCharacterEncoding("UTF-8");
     resp.setCharacterEncoding("UTF-8");
-
     Csrf.verify(req);
 
     int y = intParam(req, "y", LocalDate.now().getYear());
     int m = intParam(req, "m", LocalDate.now().getMonthValue());
 
-    // 1) đảm bảo có run
     long runId = payroll.findRun(y, m).orElseGet(() -> payroll.createRun(y, m));
 
-    // 2) lấy danh sách user cần tính
-    @SuppressWarnings("unchecked")
-    List<User> users = (List<User>) getServletContext().getAttribute("ALL_USERS");
-    if (users == null || users.isEmpty()) {
-      resp.sendError(500, "Không có danh sách nhân sự để tính lương.");
+    // Lấy user ACTIVE + department + salary_decimal (nếu có)
+    List<Emp> users = loadActiveUsers();
+    if (users.isEmpty()) {
+      resp.sendError(500, "Không tìm thấy nhân sự ACTIVE trong Users.");
       return;
     }
 
-    // 3) Tính cho từng user
-    for (User u : users) {
-      if (u == null) continue;
-      Object st = safeObj(u.getStatus());
-      if (st != null && !"ACTIVE".equalsIgnoreCase(String.valueOf(st))) continue;
+    for (Emp u : users) {
+      if (u == null || u.id == null) continue;
 
-      Long userId = toLong(u.getId());
-      if (userId == null) continue;
+      Map<String,Object> at = attendance.monthSummary(u.id, y, m);
+      int workdays  = asInt(at.getOrDefault("presentDays", at.getOrDefault("workdays", 0)));
+      int lateCount = asInt(at.getOrDefault("lateCount", 0));
+      int otMinutes = asInt(at.getOrDefault("totalOTMin", 0));
 
-      Map<String,Object> at = attendance.monthSummary(userId, y, m);
-      int workdays  = num(at.getOrDefault("presentDays", at.getOrDefault("workdays", 0))).intValue();
-      int lateCount = num(at.getOrDefault("lateCount", 0)).intValue();
-      int otMinutes = num(at.getOrDefault("totalOTMin", 0)).intValue();
-
-      double baseInput = baseSalaryOf(u, 10_000_000d);
-      BigDecimal base = bd(baseInput);
+      // === Tất cả đều BigDecimal ===
+      BigDecimal base = (u.baseSalary != null) ? u.baseSalary : bd(10_000_000L);
 
       BigDecimal dayRate    = base.divide(bd(22), 2, RoundingMode.HALF_UP);
       BigDecimal baseSalary = dayRate.multiply(bd(workdays));
 
-      BigDecimal hourly = base.divide(bd(22 * 8), 2, RoundingMode.HALF_UP);
-      BigDecimal otPay  = bd(otMinutes / 60.0).multiply(hourly).multiply(bd(1.5));
+      BigDecimal hourly   = base.divide(bd(22 * 8), 2, RoundingMode.HALF_UP);
+      BigDecimal otHours  = bd(otMinutes).divide(bd(60), 2, RoundingMode.HALF_UP);
+      BigDecimal otPay    = otHours.multiply(hourly).multiply(bd(15, 10)); // 1.5x
 
-      BigDecimal allowance = bd(500_000);               // demo
-      BigDecimal penalty   = bd(lateCount * 30_000);    // demo
+      BigDecimal allowance = bd(500_000);                                // ví dụ phụ cấp
+      BigDecimal penalty   = bd(lateCount).multiply(bd(30_000));         // ví dụ phạt
 
-      BigDecimal insurance = baseSalary.multiply(bd(0.10)).setScale(0, RoundingMode.HALF_UP);
+      BigDecimal insurance = baseSalary.multiply(bd(10, 100))            // 10%
+                                       .setScale(0, RoundingMode.HALF_UP);
       BigDecimal taxable   = baseSalary.add(otPay).add(allowance).subtract(insurance);
       if (taxable.signum() < 0) taxable = BigDecimal.ZERO;
-      BigDecimal tax = taxable.multiply(bd(0.05)).setScale(0, RoundingMode.HALF_UP);
+      BigDecimal tax = taxable.multiply(bd(5, 100))                      // 5%
+                               .setScale(0, RoundingMode.HALF_UP);
 
-      BigDecimal bonus = switch (safeStr(u.getDepartment()).toUpperCase()) {
+      BigDecimal bonus = switch (safe(u.department).toUpperCase()) {
         case "SALE", "SALES" -> bd(1_000_000);
         case "QA"            -> bd(500_000);
         default              -> BigDecimal.ZERO;
@@ -120,7 +113,7 @@ public class PayrollServlet extends HttpServlet {
 
       PayrollItem pi = new PayrollItem();
       pi.setRunId(runId);
-      pi.setUserId(userId);
+      pi.setUserId(u.id);
       pi.setBaseSalary(baseSalary);
       pi.setAllowance(allowance);
       pi.setOtPay(otPay);
@@ -129,7 +122,7 @@ public class PayrollServlet extends HttpServlet {
       pi.setInsurance(insurance);
       pi.setTax(tax);
       pi.setNetPay(net);
-      pi.setNote("Auto calc %d-%02d".formatted(y, m));
+      pi.setNote(String.format("Auto calc %d-%02d", y, m));
 
       payroll.upsertItem(pi);
     }
@@ -137,40 +130,46 @@ public class PayrollServlet extends HttpServlet {
     resp.sendRedirect(req.getContextPath() + "/payroll?y="+y+"&m="+m);
   }
 
-  // ================== Helpers ==================
+  /* ================== Helpers ================== */
   private static int intParam(HttpServletRequest r, String k, int d){
     try { return Integer.parseInt(r.getParameter(k)); } catch(Exception e){ return d; }
   }
-  private static BigDecimal bd(double v){ return BigDecimal.valueOf(v); }
-  private static Number num(Object o){
-    if (o instanceof Number n) return n;
-    try { return Double.valueOf(String.valueOf(o)); } catch(Exception e){ return 0; }
+  private static BigDecimal bd(long v){ return BigDecimal.valueOf(v); }
+  /** num/den (ví dụ 15/10=1.5; 5/100=0.05) */
+  private static BigDecimal bd(int num, int den){
+    return BigDecimal.valueOf(num).divide(BigDecimal.valueOf(den), 4, RoundingMode.HALF_UP);
   }
-  private static Object safeObj(Object o){ return o; }
-  private static String safeStr(Object o){ return o == null ? "" : String.valueOf(o); }
+  private static BigDecimal bd(int v){ return BigDecimal.valueOf(v); }
+  private static String safe(Object o){ return o == null ? "" : String.valueOf(o); }
+  private static int asInt(Object o){
+    try { return (o instanceof Number n) ? n.intValue() : Integer.parseInt(String.valueOf(o)); }
+    catch (Exception e){ return 0; }
+  }
 
-  /** Lấy base salary từ User bằng nhiều tên getter phổ biến; nếu không có thì trả defaultVal. */
-  private static double baseSalaryOf(User u, double defaultVal){
-    if (u == null) return defaultVal;
-    String[] guesses = {"getBaseSalary","getSalaryBase","getSalary","getWage","getMonthlySalary"};
-    for (String m : guesses) {
-      try {
-        var meth = u.getClass().getMethod(m);
-        Object val = meth.invoke(u);
-        if (val instanceof Number)   return ((Number) val).doubleValue();
-        if (val != null)             return Double.parseDouble(String.valueOf(val));
-      } catch (Exception ignore) {}
+  /** Tải user ACTIVE: id, department, salary_decimal (nếu có) */
+  private List<Emp> loadActiveUsers() {
+    final String SQL = "SELECT id, department, salary_decimal FROM dbo.Users WHERE status = 1";
+    List<Emp> list = new ArrayList<>();
+    try (Connection c = ds.getConnection();
+         PreparedStatement ps = c.prepareStatement(SQL);
+         ResultSet rs = ps.executeQuery()) {
+      while (rs.next()) {
+        Emp e = new Emp();
+        e.id = rs.getLong("id");
+        try { e.department = rs.getString("department"); } catch (SQLException ignore) {}
+        try { e.baseSalary = rs.getBigDecimal("salary_decimal"); } catch (SQLException ignore) {}
+        list.add(e);
+      }
+    } catch (SQLException e) {
+      throw new RuntimeException("Load active users error", e);
     }
-    return defaultVal;
+    return list;
   }
 
-  /** Chuẩn hoá về Long an toàn (User#getId có thể là int/Integer/long/Long/String). */
-  private static Long toLong(Object id) {
-    if (id == null) return null;
-    if (id instanceof Long)    return (Long) id;
-    if (id instanceof Integer) return ((Integer) id).longValue();
-    if (id instanceof Short)   return ((Short) id).longValue();
-    if (id instanceof Byte)    return ((Byte) id).longValue();
-    try { return Long.valueOf(String.valueOf(id).trim()); } catch (Exception e) { return null; }
+  /** cấu trúc tạm cho tính lương */
+  static class Emp {
+    Long id;
+    String department;
+    BigDecimal baseSalary; // từ Users.salary_decimal (nullable)
   }
 }
